--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -36,7 +36,8 @@
     "**/*.mts",
     ".next/types/**/*.ts",
     ".next\\dev/types/**/*.ts",
-    ".next\\dev/types/**/*.ts"
+    ".next\\dev/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
